@@ -1,10 +1,6 @@
 - Library
   - Artist icons ?
 
-- Folders
-  - Add delete file/folder option??
-  - Incremental update of model? Not sure its worth the hassle
-
 - Streams
   - Handle more than 1st entry?? Not sure
   - Icecast?
