@@ -36,6 +36,7 @@
 27. Fix streams export.
 28. Save/restore maximised state when collpasing/expanding interface.
 29. Add 'copy to device', etc, actions to folders page.
+30. Incremental update of folder page items.
 
 0.3.0
 -----
